// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders while running 1`] = `
<div
  class="sc-dmyDGi gpruqI"
>
  <div
    class="sc-eDLJxc iUwERV"
  >
    <span
      class="sc-jTQDnj"
    >
      0
    </span>
    <span
      class="sc-gLLvby hqUfbq"
    >
      42
    </span>
  </div>
  <button
    class="sc-beySbM sc-guDLRT jNNPsS fHBXRy"
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  class="sc-dmyDGi gpruqI"
>
  <div
    class="sc-hLQRIN iySlGb"
  >
    🛌🛌
  </div>
  <button
    class="sc-beySbM sc-guDLRT hqxQTF fHBXRy"
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  class="sc-dmyDGi gpruqI"
>
  <div
    class="sc-hLQRIN iySlGb"
  >
    🍅
  </div>
  <button
    class="sc-beySbM sc-guDLRT hqxQTF fHBXRy"
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  class="sc-dmyDGi gpruqI"
>
  <div
    class="sc-hLQRIN iySlGb"
  >
    🛌
  </div>
  <button
    class="sc-beySbM sc-guDLRT hqxQTF fHBXRy"
  >
    Start
  </button>
</div>
`;
